tests/fixtures/invalid-closures/borrowed-capture.mlg
func Make(con name string) func() int {
    return func() int {
        print(name)
        return 0
    }
}

func main() {}
